openmediavault-compose (8.0.1) UNRELEASED; urgency=medium

  * Check file syntax on save if enabled

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 26 Nov 2025 22:46:43 +0000

openmediavault-compose (8.0) stable; urgency=low

  * Update for omv 8.x

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sun, 28 Sep 2025 09:31:40 -0500

openmediavault-compose (7.6.13) stable; urgency=low

  * Add env variable to remove cterm dependency

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 11 Aug 2025 07:33:04 -0500

openmediavault-compose (7.6.12) stable; urgency=low

  * Remove old cterm file

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 21 Jul 2025 16:10:23 -0500

openmediavault-compose (7.6.11) stable; urgency=low

  * Fix backup script for variable interpolation

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sat, 28 Jun 2025 10:54:42 -0500

openmediavault-compose (7.6.10) stable; urgency=low

  * Try to return NA for locally built images with any digest that is
    none or empty

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 24 Jun 2025 11:52:51 -0500

openmediavault-compose (7.6.9) stable; urgency=low

  * Add docker image prune button to images tab
  * Improve image status

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sat, 21 Jun 2025 15:54:32 -0500

openmediavault-compose (7.6.8) stable; urgency=low

  * Group images with same name and tag

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sat, 21 Jun 2025 08:09:15 -0500

openmediavault-compose (7.6.7) stable; urgency=low

  * Add file description to backup and restore
  * Restore override file if it exists
  * Add missing database fields to restore
  * Remove openmediavault-cterm as a hard dependency to prevent
    people from removing this plugin when they uninstall cterm.
    cterm will be installed by saltstack.
  * Backup build directory if exists in compose file.
