@@ -46,6 +46,8 @@ if ! omv_config_exists "/config/services/compose"; then
   omv_config_add_key "/config/services/compose" "backupsharedfolderref" ""
   omv_config_add_key "/config/services/compose" "backupmaxsize" "1"
   omv_config_add_key "/config/services/compose" "dockerStorage" "${dockerPath}"
+  omv_config_add_key "/config/services/compose" "logmaxsize" "50"
+  omv_config_add_key "/config/services/compose" "liverestore" "1"
   omv_config_add_key "/config/services/compose" "urlHostname" ""
   omv_config_add_key "/config/services/compose" "cachetimefiles" "60"
   omv_config_add_key "/config/services/compose" "cachetimeservices" "60"
