@@ -1,6 +1,9 @@
 openmediavault-compose (8.0.1) UNRELEASED; urgency=medium
 
   * Check file syntax on save if enabled
+  * Add docker log size field and enable rotation if greater than 0
+  * Add live restore option to avoid restarting containers when docker is
+    restarted/upgraded
 
  -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 26 Nov 2025 22:46:43 +0000
 
